rome2_results/results/permutate/omp.log
clang++ -fopenmp -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx908 -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -c ../permutate-cuda/main.cpp -o main.o
clang++ -fopenmp -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx908 -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -c ../permutate-cuda/permutation_testing.cpp -o permutation_testing.o
clang++ -fopenmp -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx908 -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -c ../permutate-cuda/utils.cpp -o utils.o
clang++ -fopenmp -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx908 -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -I../include -I../permutate-cuda -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -D__STRICT_ANSI__ -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -O3 -c ../permutate-cuda/statistical_test.cpp -o statistical_test.o
../permutate-cuda/statistical_test.cpp:111:22: error: call to 'max' is ambiguous
  111 |   *out_max = (double)max(pos, len - pos);
      |                      ^~~
/home/ga27mex2/spack_rome2/spack/opt/spack/linux-sle_hpc15-zen2/gcc-14.2.0/llvm-19.1.3-i57j2ts5u3gyfath4t24y6yjigtzjjfh/lib/clang/19/include/__clang_hip_math.h:1286:33: note: candidate function [with T = unsigned int]
 1286 | template <class T> __DEVICE__ T max(T __arg1, T __arg2) {
      |                                 ^
/home/ga27mex2/spack_rome2/spack/opt/spack/linux-sle_hpc15-zen2/gcc-13.1.0/gcc-14.2.0-xlpqn36xkc4cerhd6hjcatncxwe362si/lib/gcc/x86_64-pc-linux-gnu/14.2.0/../../../../include/c++/14.2.0/bits/algorithmfwd.h:403:5: note: candidate function [with _Tp = unsigned int]
  403 |     max(const _Tp&, const _Tp&);
      |     ^
1 error generated.
make: *** [Makefile:76: statistical_test.o] Error 1
